--- a/style.css
+++ b/style.css
@@ -1,26 +1,23 @@
 :root {
-    --background-color: #4D5E54;
-    --table-background-rgb: 255, 255, 255;
-    --thead-font-color: rgba(var(--table-background-rgb),0.5);
-    --tbody-font-color: rgba(255,255,255,.9);
+    --conteudo-bg-hex: #FFF;
+    --thead-bg-hex: #333333;
+    --tbody-bg-hex: #e6e6e6;
 
-    --background-color: #FFF;
-    --table-background-rgb: 0, 0, 0;
-    --theadbg-h2-menubg-opacity: .8;
-    --thead-font-color: ;
-    --tbody-font-color: ;
-    --tr-border: 2px solid var(--background-color);
+    --table-rounded-borders-border: 0.2em solid;
+    --table-rounded-borders-radius: 0.5em;
 
-    --menu-width: 20vw;
-    --content-width: calc(100 - var(--menu-width));
-    --content-leftright-padding: 12vw; 
+    --menu-width: 24vw;
+    --menu-padding: 2vw;
+    --content-width: calc(100vw - var(--menu-width));
+    --content-left-right-padding: 12vw;
 }
 
 body {
     margin: 0;
-    background-color: var(--background-color);
+    background-color: var(--conteudo-bg-hex);
     font-family: "Lucida Console", Monaco, monospace;
-    color: white;
+    /* color: white; */
+    /* box-sizing: border-box; */
 }
 
 /* ------------------     LANDING PAGE     -------------------- */
@@ -39,6 +36,7 @@ body {
     opacity: 1;
     z-index: 2;
     transition: opacity 0.5s ease;
+    color: white;
 }
 
 #landing-page > span {
@@ -70,6 +68,14 @@ p > span {
     cursor: pointer;
 }
 
+#landing-page footer {
+    position: fixed;
+    font-size: 0.7em;
+    bottom: 5vh;
+    background-color: rgba(255,0,0,0.8);
+    padding: 0.2em;
+}
+
 /* ------------------     MENU     -------------------- */
 
 #menu-background {
@@ -79,24 +85,24 @@ p > span {
     width: 100vw;
     height: 100vh;
     transition: width 2s ease, opacity 2s ease-in;
-    /* background-color: #BFDEB6; */
-    background-color: rgb(51,51,51);
+    background-color: var(--thead-bg-hex);
     z-index: 1;
 }
 
 #menu {
     display: none;
-    /* background-color: #BFDEB6; */
-    background-color: rgb(51,51,51);
+    background-color: var(--thead-bg-hex);
+    color: white;
     height: 100vh;
     width: var(--menu-width);
+    min-width: 264px;
     text-align: left;
     font-size: 0.8em;
     position: fixed;
     left: 0;
     top: 0;
-    padding: 3vw 2vw;
-    /* box-sizing: border-box; */
+    padding: var(--menu-padding);
+    box-sizing: border-box;
     box-shadow: 0 0 0.5em black;
     opacity: 0;
     transition: opacity 1s ease;
@@ -104,7 +110,7 @@ p > span {
 }
 
 #menu h2 {
-    margin-top: 0;
+    margin: 0;
 }
 
 #menu > p {
@@ -121,10 +127,14 @@ fieldset {
     padding: 1em;
     border-radius: inherit;
     border: 1px solid white;
+    margin: 0;
     margin-bottom: 1em;
     width: 100%;
-    max-width: var(--menu-width);
     box-sizing: border-box;
+}
+
+fieldset:last-child {
+    display: none;
 }
 
 legend, input[type=submit] {
@@ -147,13 +157,11 @@ fieldset:first-child input { /* TODO: AJEITAR!!!!! */
     border-color: transparent;
 }
 
-label {
-    font-weight: bold;
-}
-
 #div-lists-menu {
-    height: 30vh;
-    width: calc(var(--menu-width) - 2em); /* 2em = padding do fieldset * 2 */
+    /* height: 25vh; */
+    height: 50vh;
+    min-width: 100%;
+    max-width: calc(var(--menu-width) - calc(2 * calc(var(--menu-padding) + 1em))); /* 1em = padding do fieldset * 2 */
     text-align: left;
     overflow-y: scroll;
     /* background-color: rgba(255,255,255,.1); */
@@ -218,83 +226,127 @@ ul, li {
     list-style-type: none;
 }
 
+#seu-objetivo {
+    overflow: hidden;
+    white-space: pre;
+    text-overflow: ellipsis;
+    /* -webkit-appearance: none; */
+}
 
 
 /* ------------------     PERFIL     -------------------- */
 
-#perfil {
+#conteudo {
     display: none;
     top: 0;
-    margin-left: var(--menu-width);
+    margin-left: max(264px, var(--menu-width));
     width: var(--content-width);
+    min-width: 810px;
     height: 100vh;
-    padding: 3em var(--content-leftright-padding);
+    /* padding: 3em clamp(15px, var(--content-left-right-padding), 50px); */
+    /* padding: 3em max(var(--content-left-right-padding), 124px); */
+    /* padding: clamp(5px, var(--content-left-right-padding), var(--content-left-right-padding)); */
+    /* padding: 3em var(--content-left-right-padding); */
+    padding: 3em max(12.5vw, 135px);
     box-sizing: border-box;
     overflow: auto;
     z-index: 2;
+    color: var(--conteudo-font-color);
+}
+
+#planejamento {
+    display: none;
 }
 
 .periodo {
     margin-bottom: 3em;
 }
 
-.periodo h2 {
-    font-size: 1.8em;
-    color: rgba(var(--table-background-rgb), var(--theadbg-h2-menubg-opacity));
-}
-
 table {
     font-size: 0.9em;
     width: 100%;
-    border-spacing: 0;
-    border: var(--tr-border);
-    border-radius: 10px;
-    overflow: hidden;
+    table-layout: fixed;
 }
 
 thead {
     font-weight: bold;
-    color: var(--background-color);
-    background-color: rgba(var(--table-background-rgb), var(--theadbg-h2-menubg-opacity));
+    color: var(--conteudo-bg-hex);
+    background-color: var(--thead-bg-hex);
+    max-width: 100%;
+    white-space: nowrap;
 }
 
 tbody {
     font-weight: lighter;
-    color: rgba(var(--table-background-rgb), .8);
-    background-color: rgba(var(--table-background-rgb), .1);
-}
-
-td, th {
-    padding: 0.5em 1em;
+    background-color: var(--tbody-bg-hex);
 }
 
 th {
-    white-space: nowrap;
+    padding: 0.5em;
+    border: var(--table-rounded-borders-border) var(--thead-bg-hex);
 }
 
-td:not(:last-child), th:not(:last-child) {
+td {
+    padding: 0.2em 0.4em;
+    border: var(--table-rounded-borders-border) var(--tbody-bg-hex);
+}
+
+th:first-child {
+    border-top-left-radius: var(--table-rounded-borders-radius);
+}
+
+th:last-child {
+    border-top-right-radius: var(--table-rounded-borders-radius);
+}
+
+tr:last-child td:first-child {
+    border-bottom-left-radius: var(--table-rounded-borders-radius);
+}
+
+tr:last-child td:last-child {
+    border-bottom-right-radius: var(--table-rounded-borders-radius);
+}
+
+/* td:not(:last-child), th:not(:last-child) {
     border-right: var(--tr-border);
 }
 
 tr:not(:last-child) td {
     border-bottom: var(--tr-border);
+} */
+
+th:nth-child(1) {
+    width: 16%;
+    max-width: 84px;
 }
 
 th:nth-child(2) {
-    width: 100%;
+    width: 44%;
+}
+
+th:nth-child(3) {
+    width: 11%;
+}
+
+th:nth-child(4) {
+    width: 29%;
 }
 
 td:nth-child(2) {
     font-weight: bold;
+    white-space: nowrap;
+    overflow-x: scroll;
 }
 
 td:not(:nth-child(2)) {
     text-align: center;
 }
 
-td:last-child {
+/* TODO: adicionar div com flex no lugar da <td> (do jeito que tá o border-radius não funciona */
+td:last-child { 
     display: flex;
     justify-content: space-evenly;
+    overflow: visible;
 }
 
 td:last-child div {
@@ -305,6 +357,7 @@ td:last-child div {
     box-sizing: border-box;
     width: 40%;
     cursor: context-menu;
+    position: relative;
 }
 
 .eh-pre-req {
@@ -312,7 +365,34 @@ td:last-child div {
     border-color: lightpink;
 }
 
+.eh-pre-req:hover {
+    background-color: lightpink;
+}
+
 .tem-pre-req {
     background-color: cyan;
     border-color: lightcyan;
+}
+
+.tem-pre-req:hover {
+    background-color: lightcyan;
+}
+
+td:last-child div span {
+  visibility: hidden;
+  width: 200%;
+  background-color: rgb(51,51,51);
+  color: #fff;
+  text-align: center;
+  border-radius: 0.5em;
+  padding: 0.5em;
+  position: absolute;
+  top: 115%;
+  right: -60%;
+  z-index: 1;
+  font-size: 0.7em;
+}
+
+td:last-child div:hover span {
+  visibility: visible;
 }
