--- a/style.css
+++ b/style.css
@@ -336,6 +336,18 @@ td:nth-child(2) {
     font-weight: bold;
     white-space: nowrap;
     overflow-x: scroll;
+    display: block;
+    border-block: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+td:nth-child(2)::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+td:nth-child(2) {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 td:not(:nth-child(2)) {
