Adiciona contato p/ feedback

--- a/style.css
+++ b/style.css
@@ -236,6 +236,10 @@ ul, li {
 
 /* ------------------     PERFIL     -------------------- */
 
+a {
+    color: red;
+}
+
 #conteudo {
     display: none;
     top: 0;
